#    This file is part of odo.
#
#    odo is free software: you can redistribute it and/or modify
#    it under the terms of the GNU Affero General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    odo is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU Affero General Public License for more details.
#
#    You should have received a copy of the GNU Affero General Public License
#    along with odo.  If not, see <https://www.gnu.org/licenses/>.
cargo-features = ["strip"]
[package]
name = "odo"
version = "0.1.0"
authors = ["Emil Sayahi <limesayahi@gmail.com>"]
edition = "2021"
resolver = "2"
license = "AGPL-3.0-or-later"
description = "Productivity tool for running codebase workflows."
repository = "https://github.com/Dirout/odo"
homepage = "https://github.com/Dirout/odo"
readme = "README"

[lib]
name = "odo"
path = "src/lib.rs"
crate-type=["rlib", "dylib", "staticlib"]

[[bin]]
name = "odo"
path = "src/main.rs"
doc = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.1", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
lazy_static = "1.4.0"
linked-hash-map = "0.5.4"
liquid = "0.26.0"
liquid-core = "0.26.0"
liquid-lib = { version = "0.26.0", features = ["stdlib", "jekyll", "shopify", "extra"] }
mimalloc = { version = "0.1.28", default-features = false }
run_script = "0.9.0"
serde = "1.0.136"
serde_yaml = "0.8.23"
yaml-rust = "0.4.5"

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
rpath = false
panic = 'abort'
strip = "symbols"

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[package.metadata.deb]
section = "utility"
priority = "optional"
assets = [
    ["target/x86_64-unknown-linux-gnu/release/odo", "usr/bin/", "755"],
    ["target/x86_64-unknown-linux-gnu/release/libodo.so", "usr/lib/", "644"],
    ["README", "usr/share/doc/odo/README", "644"],
    ["COPYING", "usr/share/doc/odo/COPYING", "644"],
]

[package.metadata.rpm]
package = "odo"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
odo = { path = "/usr/bin/odo" }
